examples/bad/string_from_int_slice.mko
// Must fail: cannot convert []int to string
fn main() {
    let a = [1, 2, 3]
    print(string(a))
}
